# mtuci-rs

./: Cargo.toml
Ferris/: Cargo.toml
ch10/: Cargo.toml
ch10/src/: lifetimes.rs  traits.rs
ch11/src/: main.rs
ch12/src/: main.rs
ch13/src/: main.rs
ch14/src/: main.rs
ch15/src/: main.rs
ch3/: Cargo.toml
ch3/src/: control_flow.rs  data_types.rs  functions.rs  variables.rs
ch4/: Cargo.toml
ch4/src/: main.rs  ref_bor.rs
ch5/: Cargo.toml
ch5/src/: rectangle.rs  struct.rs
ch6/src/: main.rs
ch7/: Cargo.toml
ch7/src/: libs.rs
ch8/: Cargo.toml
ch8/src/: hashmap.rs  vec.rs
ch9/: Cargo.toml
ch9/src/: error_handling.rs
guessing_game/src/: main.rs
homework_1/src/: main.rs
homework_2/: Cargo.toml
homework_2/src/: task1.rs  task2.rs
tokio/: Cargo.toml
tokio/examples/: hello-redis.rs
tokio/src/: MutexGuard.rs  asynchronous_mutex.rs  connection.rs  hashmap.rs  update_process.rs
