[package]
name = "ch10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generic_data_types"
path = "src/generic_data_types.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[dependencies]
