[package]
name = "ch3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "shadowing"
path = "src/shadowing.rs"

[[bin]]
name = "data_types"
path = "src/data_types.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "control_flow"
path = "src/control_flow.rs"


[dependencies]
